k8s/marmitify-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: marmitify-service
spec:
  type: LoadBalancer
  ports:
    - name: frontend
      port: 3000
      targetPort: 3000
    - name: backend
      port: 3001
      targetPort: 3001
  selector:
    app: marmitify
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marmitify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marmitify
  template:
    metadata:
      labels:
        app: marmitify
    spec:
      containers:
        - name: marmitify
          image: silasnh/marmitify:latest
          ports:
            - containerPort: 3000
            - containerPort: 3001
