k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marmitify-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - marmitify.duckdns.org
      secretName: marmitify-tls
  rules:
    - host: marmitify.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marmitify-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: marmitify-service
                port:
                  number: 3001
